<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#fff">
     
             

    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    <LinearLayout 
  
    android:background="@drawable/logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
        </LinearLayout>
        </LinearLayout>

  
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">
    
    <RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="10dp"
    
    android:background="@drawable/contentbg">
    
       
        
        <TextView 
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/username"
            
            
            />
    
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
       android:layout_marginTop="5dp"
        android:background="@drawable/backborder"
        android:inputType="textEmailAddress" 
        android:singleLine="true"
        android:paddingLeft="10dp"
        android:hint="@string/uname"
        android:paddingRight="6dp"
        android:imeOptions="actionNext"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernameText">
<!--     android:text="iphone15"      -->

        <requestFocus />
    </EditText>

    
    <TextView 
            android:id="@+id/gymidText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Gymid"
            android:layout_below="@id/username"
           android:layout_marginTop="5dp" />
    
    
     <EditText
        android:id="@+id/gidput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/backborder"
        android:inputType="number" 
        android:singleLine="true"
        android:paddingLeft="10dp"
        android:hint="@string/gidput"
        android:paddingRight="6dp"
        android:imeOptions="actionNext"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/gymidText"
        />
        
<!--    android:text="135"    -->
     
  <TextView 
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/password"
            android:layout_below="@id/gidput"
            android:layout_marginTop="5dp"/>
    
     
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/passwordText"
        
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:background="@drawable/backborder"
        android:singleLine="true"
         android:paddingLeft="10dp"
        android:paddingRight="6dp"
        android:imeOptions="actionDone"
        android:layout_centerHorizontal="true"
        android:hint="@string/pwd"/>

<!--  android:text="iphone15"    -->
   
  <LinearLayout
        android:id="@+id/loginview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in" 
        android:layout_marginTop="5dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true">
    
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/monthbutton"
        android:text="@string/signin"
        android:layout_marginRight="10dp"
        android:textColor="#fff"  />

    

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:background="@drawable/monthbutton"
        android:textColor="#fff" />
    
   </LinearLayout>
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fp"
        android:textColor="#fff"
        android:layout_below="@id/loginview"
        android:layout_centerHorizontal="true" />
    
     <Button
         android:layout_marginTop="5dp"
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup" 
        android:textColor="#5D8AA8"
        android:layout_below="@id/forgetpassword"
        android:layout_centerHorizontal="true"/>
     
     
    

</RelativeLayout>
</LinearLayout>
             

</LinearLayout>