<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    
     <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    <LinearLayout 

android:background="@drawable/logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
        </LinearLayout>
        </LinearLayout> 
    
     <TextView 
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textColor="#555555"
                    android:gravity="center|left"
                    android:textSize="24sp"
                    android:padding="6dp"
                    android:id="@+id/gymid"
                    android:text="@string/gymid"
                    android:background="@drawable/gymidbg"/> 

          <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical">
    
                        <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight=".2"
    android:layout_margin="20dp"
    android:background="@drawable/contentbg"
    android:orientation="vertical"
    android:gravity="center">

             <Button  
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="#ffffff"
                    android:padding="3dp"
                    android:id="@+id/upperbody"
                    android:text="@string/ub"
                    android:layout_margin="8dp"
                    android:background="@drawable/workoutlogbutton"/> 
                    
             <Button 
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="#ffffff"
                    android:padding="3dp"
                    android:id="@+id/lowerbody"
                    android:text="@string/lb"
                    android:layout_margin="8dp"
                    android:background="@drawable/workoutlogbutton"/>
             
             
             <Button 
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="#ffffff"
                    android:padding="3dp"
                    android:id="@+id/fatburning"
                    android:text="@string/fb"
                    android:layout_margin="8dp"
                    android:background="@drawable/workoutlogbutton"/>
                    </LinearLayout>  

             
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight=".8"
    android:gravity="right|center"
    android:background="@drawable/footerbg" >
     
                 <Button 
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="#ffffff"
                    android:padding="3dp"
                    android:id="@+id/home"
                    android:text="@string/home"
                    android:background="@drawable/homebutton"/> 
     </LinearLayout>
              </LinearLayout>
</LinearLayout>