<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

        <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    <LinearLayout 

android:background="@drawable/logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
        </LinearLayout>
        </LinearLayout> 
    
     <TextView 
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:textColor="#000000"
                    android:gravity="center|left"
                    android:textSize="24sp"
                    android:padding="6dp"
                    android:id="@+id/gymid"
                    android:text="@string/gymid"
                    android:background="@drawable/gymidbg"/> 
     
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/contentbg"
    android:layout_margin="20dp" >
    <Button
        android:id="@+id/scanbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/qrscanner"
        android:layout_margin="8dp" />
    
     <TextView
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanid"
        android:textSize="20sp" 
        android:layout_margin="4dp"/>
     
     
          <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gymid"
        android:textSize="18sp"
        android:layout_margin="4dp" />

          <EditText
              android:id="@+id/ideditText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:ems="10"
              android:inputType="number"
              android:layout_margin="4dp"
              android:background="@drawable/textbutton"
              android:gravity="center"
              android:padding="4dp" >

              <requestFocus />
          </EditText>

          <Button
              android:id="@+id/toexcbutton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/submit"
              android:textColor="#fff"
              android:background="@drawable/monthbutton"
              android:layout_margin="4dp" />
</LinearLayout>
</LinearLayout>